fix: remove italic style in small devices in nav links, fix the spacing and layout of hero section in tablet screens, adjust the navbar to fit small laptops

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     --light: #fff;
     --font-size-base: clamp(16px, 1vw + 0.5rem, 18px);
     --font-size-h1: clamp(2.25rem, 2.5vw + 1rem, 4rem);
-    --font-size-nav: clamp(1rem, 1.75vw + 0.5rem, 1.35rem);
+    --font-size-nav: clamp(1rem, 1.15vw + 0.35rem, 1.35rem);
 }
 
 * {
@@ -64,7 +64,7 @@ h1 {
 
     ul.nav-list {
         display: flex;
-        padding: 0 clamp(0.5rem, 8vw + .5rem, 3rem);
+        padding: 0 clamp(0.5rem, 3vw + .5rem, 3rem);
         gap: clamp(1rem, 1.5vw, 1.75rem);
         align-items: center;
         justify-content: center;
@@ -135,6 +135,7 @@ h1 {
             line-height: 1.75;
             padding-block: 5vw;
             font-size: var(--font-size-base);
+            font-weight: 300;
         }
 
         .hero-action-btn {
@@ -156,14 +157,17 @@ h1 {
 .about-section {
     min-height: 100vh;
     display: flex;
-    gap: clamp(3rem, 3vw, 5rem);
+    gap: clamp(2rem, 3vw, 5rem);
     align-items: center;
     padding: 10vh 5vw;
     background-image: linear-gradient(120deg, rgb(253, 246, 183), rgb(244, 180, 240) 70%);
 
     .image-grid-wrapper {
+        flex-shrink: 0;
         width: 50%;
         display: grid;
+        justify-content: center;
+        align-items: center;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(2, 1fr);
         gap: 2rem;
@@ -185,8 +189,7 @@ h1 {
     }
 
     .about-content {
-        max-width: 35vw;
-        width: fit-content;
+        max-width: 45vw;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -200,14 +203,12 @@ h1 {
         }
 
         .title {
-            width: fit-content;
             font-size: var(--font-size-h1);
             letter-spacing: .25ch;
             margin-block: 1rem;
             line-height: 1;
             text-transform: uppercase;
         }
-
 
         .arrow-img {
             width: 1.5rem;
@@ -239,19 +240,6 @@ h1 {
         }
     }
 
-    .hero-section {
-        flex-direction: column-reverse;
-        min-height: fit-content;
-
-        .hero-content {
-            padding-block: 2rem;
-        }
-
-        .hero-img {
-            width: 100%;
-            height: 50%;
-        }
-    }
 
     .about-section {
         flex-direction: column;
@@ -264,8 +252,7 @@ h1 {
         }
 
         .about-content {
-            width: 100%;
-            /* max-width: 60vw; */
+            min-width: 50vw;
         }
     }
 }
@@ -278,32 +265,50 @@ h1 {
     nav.navbar ul.nav-list {
         flex-direction: column;
         padding: .5rem 1rem;
-    
+
         li {
             width: 100%;
-            padding: .75rem 0;
-            font-style: italic;
+            padding: .35rem 0;
         }
-    
+
         li:not(:last-child) {
-            border-bottom: 1px solid #000a;
+            border-bottom: 1px solid #0002;
         }
-    
-        li:last-child {
-            margin-left: auto;
+
+        li.nav-list-item:last-child {
+            display: flex;
+
+            button {
+                margin-left: auto;
+            }
         }
     }
-    
-    .hero-wrapper .hero-content {
-        padding-block: 0;
-        min-height: 100%;
+
+    .hero-section {
+        flex-direction: column-reverse;
+        gap: 2rem;
+        padding-bottom: 2rem;
+
+        .hero-img {
+            width: 100%;
+            height: 70vh;
+        }
+
+        .hero-content {
+            padding-block: 0;
+            min-height: 100%;
+        }
     }
-    
+
     .about-section {
         padding: 1rem;
-    
+
         .image-grid-wrapper {
             display: block;
+
+            img.grid-img {
+                margin-bottom: .25rem;
+            }
         }
 
         .about-content {
